force-app/main/default/objects/sfdo_grants__FundRqstCollaborator__c/sfdo_grants__FundRqstCollaborator__c.object-meta.xml
<CustomObject>
    <description>Tracks the people who accepted an invitation to collaborate on a Funding Request.</description>
    <label>Funding Request Collaborator</label>
    <nameField>
        <displayFormat>C-{0000000}</displayFormat>
        <label>Funding Request Collaborator Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Funding Request Collaborators</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>