force-app/main/default/objects/sfdo_grants__FundRqstCollaborator__c/fields/sfdo_grants__Contact__c.field-meta.xml
<CustomField>
    <fullName>sfdo_grants__Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Funding Request Collaborators</relationshipLabel>
    <relationshipName>FundRqstCollaborators</relationshipName>
    <type>Lookup</type>
</CustomField>