force-app/main/default/objects/sfdo_grants__FundRqstCollaborator__c/fields/sfdo_grants__Email__c.field-meta.xml
<CustomField>
    <fullName>sfdo_grants__Email__c</fullName>
    <formula>sfdo_grants__User__r.Email</formula>
    <label>Email</label>
    <type>Text</type>
</CustomField>