force-app/main/default/objects/sfdo_grants__FundRqstCollaborator__c/fields/sfdo_grants__FirstName__c.field-meta.xml
<CustomField>
    <fullName>sfdo_grants__FirstName__c</fullName>
    <formula>sfdo_grants__User__r.FirstName</formula>
    <label>First Name</label>
    <type>Text</type>
</CustomField>