force-app/main/default/objects/sfdo_grants__FundRqstCollaborator__c/fields/sfdo_grants__LastName__c.field-meta.xml
<CustomField>
    <fullName>sfdo_grants__LastName__c</fullName>
    <formula>sfdo_grants__User__r.LastName</formula>
    <label>Last Name</label>
    <type>Text</type>
</CustomField>