force-app/main/default/objects/sfdo_grants__FundRqstCollaborator__c/fields/sfdo_grants__Role__c.field-meta.xml
<CustomField>
    <fullName>sfdo_grants__Role__c</fullName>
    <label>Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>sfdo_grants__FundingRequestCollaboratorRole</valueSetName>
    </valueSet>
</CustomField>