force-app/main/default/objects/sfdo_grants__FundRqstCollaborator__c/fields/sfdo_grants__User__c.field-meta.xml
<CustomField>
    <fullName>sfdo_grants__User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>FundRqstCollaborators</relationshipName>
    <type>Lookup</type>
</CustomField>