force-app/main/default/objects/sfdo_grants__FundRqstCollaborator__c/listViews/sfdo_grants__All.listView-meta.xml
<ListView>
    <fullName>sfdo_grants__All</fullName>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>